--- a/src/Pages/SteakStake.scss
+++ b/src/Pages/SteakStake.scss
@@ -427,7 +427,7 @@
               width: 7.5rem;
               top: 0px;
               height: 5.6rem;
-              background: url("../../Static/img/img_token_side.png")
+              background: url("../Static/img/img_token_side.png")
                 center/contain no-repeat;
             }
             // &:last-child {
